--- a/Public/css/banner.css
+++ b/Public/css/banner.css
@@ -1,12 +1,12 @@
 #banner{
     margin-top: 33px;
     position: relative;
-    
+
 }
 
 #banner img{
-     width: 100%;
-    height: 100%+;
+    width: 100%;
+    height: 100%;
 }
 
 #banner .contenedor{
@@ -15,7 +15,7 @@
     left: 50%;
     transform: translatex(-50%) translateY(-50%);
     color: #fff;
-    
+
 }
 #banner h2{
     font-size:  28px;
@@ -28,7 +28,7 @@
     padding: 7px;
     margin-top: 10px;
     border: 3px solid #fff;
-    
+
 }
 
 #banner a:hover{
